--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   just_audio: ^0.9.38
   on_audio_query: ^2.9.0
   permission_handler: ^11.3.1
+  animated_text_kit: ^4.2.2
 
 dev_dependencies:
   flutter_test:
